force-app/main/default/objects/Department__c/fields/Department_Name_Types__c.field-meta.xml
<CustomField>
    <fullName>Department_Name_Types__c</fullName>
    <label>Department Name Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
                <default>true</default>
                <label>Clinical</label>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>