force-app/main/default/objects/Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department_Name_Types__c</columns>
    <columns>Department_Type__c</columns>
    <columns>Descriptions__c</columns>
    <columns>Hospital__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>